[gd_scene load_steps=6 format=2]

[ext_resource path="res://font/Silver.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI/PlayerGUI.gd" type="Script" id=2]
[ext_resource path="res://GUI/PlayerGUI_FONT_1.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 2
outline_color = Color( 0, 0.443137, 1, 1 )
font_data = ExtResource( 1 )

[node name="PlayerGUI" type="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -58.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoPoint" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -47.5
margin_top = -18.5
margin_right = 47.5
margin_bottom = 18.5
custom_fonts/font = ExtResource( 3 )
text = "Ammo: NULL"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthPoint" type="Label" parent="Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 40.0
margin_top = -18.5
margin_right = 112.0
margin_bottom = 18.5
custom_fonts/font = ExtResource( 3 )
text = "Health: NULL"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoldierPoint" type="Label" parent="Panel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -60.7887
margin_top = -18.5
margin_right = -20.7887
margin_bottom = 18.5
custom_fonts/font = SubResource( 1 )
text = "NULL"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResearchPoint" type="Label" parent="Panel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -112.445
margin_top = -18.5
margin_right = -72.4454
margin_bottom = 18.5
custom_fonts/font = SubResource( 2 )
text = "NULL"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
